# propagation

./: CMakeLists.txt  all.sh  build.sh  dependencies.txt  drawpattern.sh  index.js  install.sh  main  makefile  package-lock.json  package.json  propagation-pathloss.sh  propagation-pattern-draw.sh  propagation-pattern-list.sh  propagation-pattern.sh  propagation-radiohorizon.sh  propagation.sh  script.sh  service.sh  template.service  test.sh
propagation-old/: index.js  package.json
propagation-old/include/: pathloss.hpp  radiohorizon.hpp
propagation-old/lib/: path_loss.js  radio_horizon.js
propagation-old/src/: pathloss.cpp  radiohorizon.bin.cpp  radiohorizon.cpp
propagation-old/src/mongodb/: pathloss.service.cpp  radiohorizon.service.cpp
propagation-old/test/: index.js  index2.js  pathloss.cpp
propagation-ui/: index.html  package-lock.json
propagation-ui/js/: propagate.js
src/: fspl.cpp  fspl.hpp  fspl_bash.cpp  fspl_bash.cpp.2  pathloss.bin.cpp  pathloss.cpp  pathloss.service.cpp  radiohorizon.bin.cpp  radiohorizon.service.cpp
src/mongodb/: pathloss.cpp
src/service/: pathloss.cpp
test/: fspl  fspl.cpp  pathloss  pathloss.cpp  radiohorizon  radiohorizon.cpp
